<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gap_follow</name>
  <version>0.0.0</version>
  <description>autodrive gap_follow</description>
  <maintainer email="gnu_kim98@gnu.ac.kr">Myeongjun Kim</maintainer>
  <maintainer email="wndudwkd003@gnu.ac.kr">Juyoung Kim</maintainer>
  <maintainer email="219161113@gnu.ac.kr">SunWoong Moon</maintainer>
  <maintainer email="park_11412@gnu.ac.kr">Sujin Park</maintainer>
  <maintainer email="hong_0002@gnu.ac.kr">Ji-hong Park</maintainer>
  <maintainer email="gyuhyeok_lee0527@gnu.ac.kr">Gyuhyeok Lee</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
